# claude-screenshot-mcp

./: .gitignore  CLAUDE.md  README.md  install.bat  install.ps1  install.sh  pyproject.toml  setup-repo.ps1
screenshot_mcp/: __init__.py  __main__.py  capture.py  config.py  daemon.py  server.py
